History of this buildout
========================

5.0.18 (unreleased)
-------------------

- Use newer quintagroup captcha versions, plus a patch for them, so
  inline validation is not done for the captcha field.  The inline
  validation would previously succeed and then expire the key, so the
  normal non-inline validation would fail.
  [maurits]

- Only add captcha field to the registration form for anonymous users.
  [maurits]


5.0.17 (2013-07-15)
-------------------

- Disabled Mobile CSS as it caused problems on mobile devices
  [thomvl]

- Added two missing icons.
  [maurits]

- Update hotfix to 1.3.
  [maurits]


5.0.16 (2013-06-26)
-------------------

- Update the last modification date when changing a member.
  [maurits]

- Fixed some templates that were still using prefs_main_template.
  [maurits]


5.0.15 (2013-06-24)
-------------------

- Fix edit_agenda_item page.
  [maurits]


5.0.14 (2013-06-21)
-------------------

- Fix dynamic sorting and filtering in search form.
  [maurits]

- Fix display of location in meeting.
  [maurits]


5.0.13 (2013-06-18)
-------------------

- Added Plone Security hotfix 1.0.
  [maurits]


5.0.12 (2013-06-18)
-------------------

- Use new, internal Products.TinyMCE 1.3.4.zest.1.
  This is the code from the current master branch.
  [maurits]


5.0.11 (2013-06-14)
-------------------

- css: load the portal header.jpg from the context.
  [maurits]

- Add upgrade step to cook the resources.
  [maurits]

- Avoid double underlines in listing of newsletter.
  'li.newsitemslist a' got an underline, but '#content a:link'
  already got a bottom border.
  [maurits]

- Register document actions viewlet above the content title.
  Float them to the right.
  [maurits]

- Fix newsitem_view by making it a browser view.
  The title was shown twice when viewing it.
  [maurits]

- Removed tabsDropMenu.js which gave an error but was not used.
  Removed unused global_menu.pt and global_sections.pt.
  [maurits]


5.0.10 (2013-05-28)