@@ -330,4 +330,13 @@
       sortkey="1"
       profile="Products.minaraad:default" />
 
+  <gs:upgradeStep
+      title="Apply Javascript registry"
+      description=""
+      source="5022"
+      destination="5023"
+      handler="Products.minaraad.migration.apply_javascript_registry"
+      sortkey="1"
+      profile="Products.minaraad:default" />
+
 </configure>
